--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "dependencies": {
     "compression": "^1.8.1",
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "helmet": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
